buck-out/log/2022-03-06_08h09m40s_buildcommand_75e5256b-e5e9-4332-a1ec-14747b860a20/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.0s
CREATING ACTION GRAPH: FINISHED IN 0.1s
In file included from src/canvas.cpp:1:
src/canvas.hpp:21:7: error: missing '}' at end of definition of 'Canvas'
class Canvas
      ^
/Applications/Xcode_13.0.0_fb.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__bit_reference:25:1: note: still within definition of 'Canvas' here
_LIBCPP_BEGIN_NAMESPACE_STD
^
/Applications/Xcode_13.0.0_fb.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__config:850:37: note: expanded from macro '_LIBCPP_BEGIN_NAMESPACE_STD'
#define _LIBCPP_BEGIN_NAMESPACE_STD namespace std { inline namespace _LIBCPP_ABI_NAMESPACE {
                                    ^
src/canvas.cpp:8:23: error: out-of-line definition of 'GetIndex' does not match any declaration in 'Canvas'
long long int Canvas::GetIndex(const cp_int& x, const cp_int& y)
                      ^~~~~~~~
src/canvas.cpp:15:3: error: use of undeclared identifier 'data'; did you mean '_data'?
  data = new CanvasPixel[size_x * size_y];
  ^~~~
  _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:20:12: error: use of undeclared identifier 'data'; did you mean '_data'?
  delete[] data;
           ^~~~
           _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:27: error: use of undeclared identifier 'data'; did you mean '_data'?
      CanvasPixel pixel = data[x][y];
                          ^~~~
                          _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:32:34: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = data[x][y];
                          ~~~~~~~^~
src/canvas.cpp:33:34: error: no member named 'r' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                           ~~~~~ ^
src/canvas.cpp:33:43: error: no member named 'g' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                    ~~~~~ ^
src/canvas.cpp:33:52: error: no member named 'b' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                             ~~~~~ ^
src/canvas.cpp:41:14: error: redefinition of 'SetPixelColor'
void Canvas::SetPixelColor(
             ^
src/canvas.hpp:32:8: note: previous definition is here
  void SetPixelColor(
       ^
11 errors generated.
In file included from src/main.cpp:7:
src/canvas.hpp:21:7: error: missing '}' at end of definition of 'Canvas'
class Canvas
      ^
src/main.cpp:9:1: note: still within definition of 'Canvas' here
namespace bg = boost::geometry;
^
1 error generated.
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 4.6s 10/8 JOBS, 4 UPDATED

Top slow rules
    //:cg: 7.2s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-canvas.cpp.o90b2484d,default/ppandcompile.argsfile]

stderr: In file included from src/canvas.cpp:1:
src/canvas.hpp:21:7: error: missing '}' at end of definition of 'Canvas'
class Canvas
      ^
/Applications/Xcode_13.0.0_fb.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__bit_reference:25:1: note: still within definition of 'Canvas' here
_LIBCPP_BEGIN_NAMESPACE_STD
^
/Applications/Xcode_13.0.0_fb.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__config:850:37: note: expanded from macro '_LIBCPP_BEGIN_NAMESPACE_STD'
#define _LIBCPP_BEGIN_NAMESPACE_STD namespace std { inline namespace _LIBCPP_ABI_NAMESPACE {
                                    ^
src/canvas.cpp:8:23: error: out-of-line definition of 'GetIndex' does not match any declaration in 'Canvas'
long long int Canvas::GetIndex(const cp_int& x, const cp_int& y)
                      ^~~~~~~~
src/canvas.cpp:15:3: error: use of undeclared identifier 'data'; did you mean '_data'?
  data = new CanvasPixel[size_x * size_y];
  ^~~~
  _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:20:12: error: use of undeclared identifier 'data'; did you mean '_data'?
  delete[] data;
           ^~~~
           _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:27: error: use of undeclared identifier 'data'; did you mean '_data'?
      CanvasPixel pixel = data[x][y];
                          ^~~~
                          _data
src/canvas.hpp:24:19: note: '_data' declared here
    CanvasPixel * _data;
                  ^
src/canvas.cpp:32:34: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = data[x][y];
                          ~~~~~~~^~
src/canvas.cpp:33:34: error: no member named 'r' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                           ~~~~~ ^
src/canvas.cpp:33:43: error: no member named 'g' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                    ~~~~~ ^
src/canvas.cpp:33:52: error: no member named 'b' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                             ~~~~~ ^
src/canvas.cpp:41:14: error: redefinition of 'SetPixelColor'
void Canvas::SetPixelColor(
             ^
src/canvas.hpp:32:8: note: previous definition is here
  void SetPixelColor(
       ^
11 errors generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-canvas.cpp.o90b2484d,default.
